--- a/FIT5032_Assignment/Views/Home/About.cshtml
+++ b/FIT5032_Assignment/Views/Home/About.cshtml
@@ -2,8 +2,30 @@
     ViewBag.Title = "About";
 }
 <main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
 
-    <p>Use this area to provide additional information.</p>
+    <div class="aboutas m-0 p-0 pt-2 mt-2">
+        <h1>About Us</h1>
+        <p>
+            At Ultra Scan, we pride ourselves on being industry leaders in advanced scanning technology. With years of expertise, a team of dedicated professionals, and cutting-edge equipment, we offer solutions tailored to your unique needs. Whether it's medical imaging, architectural surveys, or specialized industrial applications, trust us to deliver precision and clarity every time.
+        </p>
+        <div class="container ">
+            <div class="row">
+                <div class="col m-0 p-0 align-center justify-content-center centeredImageContainer">
+                    <img src="@Url.Content("~/Content/img/about.jpg")" alt="About Us Image">
+                </div>
+                <div class="col">
+                    <p><strong>Our Commitment:</strong> From day one, our commitment to excellence has set us apart. It's not just about having advanced equipment or skilled technicians—though we have both. It's about a promise we make to each of our clients: a promise of impeccable quality, reliability, and unmatched precision.</p>
+
+                    <p><strong>A Trusted Choice:</strong> This dedication has cemented our reputation as a top-tier provider in scanning solutions. Thousands of clients, ranging from healthcare professionals to industry experts, have placed their trust in Ultra Scan. Their testimonials and continued partnership serve as a testament to the consistent value we bring.</p>
+
+                    <p><strong>Forward-Thinking:</strong> In a world where technology is ever-evolving, we don’t believe in resting on our laurels. We continuously seek out the latest advancements, ensuring that our services are not only up-to-date but also future-ready. Training workshops, global conferences, research partnerships—every avenue is explored to keep us at the forefront of innovation.</p>
+
+                    <p><em>"Innovation, Precision, Trust - These aren’t just words; they are the pillars that uphold Ultra Scan."</em></p>
+
+                    <p>As we embark on new challenges and explore uncharted territories, our core mission remains unwavering: to deliver scanning solutions that don’t just meet but consistently exceed your expectations.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </main>
