--- a/FIT5032_Assignment/Views/Appointments/Create.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Create.cshtml
@@ -244,7 +244,7 @@
     }).on('changeDate', function (e) {
         selectedDate = $('#datepicker').val();
         console.log(selectedDate);
-        //fetchData(selectedDate);
+        fetchData(selectedDate);
         $('#timeSlotSelection').show();
 
     });
